--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,13 @@ body  {
 	font-size: 20px;
 }
 
+.ejercicio6
+{
+	position: fixed;
+	left: 45%;
+	font-size: 20px;
+}
+
 #botonz
 {
 	position: fixed;
